Attempt to optimise.